src/objects/crms11__Volume_Pricing__c.object
<CustomObject>
    <description>FlexPricer Volume Price records manage data relating to volume and tiered pricing of Products.</description>
    <fields>
        <fullName>crms11__Discount_Percentage__c</fullName>
        <description>The discount to apply when the minimum quantity is reached (volume pricing) or exceeded (tiered pricing).</description>
        <inlineHelpText>The discount to apply when the minimum quantity is reached (volume pricing) or exceeded (tiered pricing).</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Flat_Rate__c</fullName>
        <description>The new sales price of this product when the minimum quantity is reached (volume pricing) or exceeded (tiered pricing).</description>
        <inlineHelpText>The new sales price of this product when the minimum quantity is reached (volume pricing) or exceeded (tiered pricing).</inlineHelpText>
        <label>Fixed Volume Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>crms11__Minimum_Quantity__c</fullName>
        <description>For volume pricing, the lowest quantity to achieve the discount. For tiered pricing, the quantity above which the discount will apply.</description>
        <inlineHelpText>For volume pricing, the lowest quantity to achieve the discount. For tiered pricing, the quantity above which the discount will apply.</inlineHelpText>
        <label>Minimum Quantity</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Volume Prices</relationshipLabel>
        <relationshipName>Volume_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Volume_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Use_Flat_Volume_Rate__c</fullName>
        <description>An internal FlexPricer indicator to advise the system to replace the Sales Price with the Fixed Volume Rate not adjust the Sales Price by the Discount Percentage.</description>
        <formula>!ISBLANK(crms11__Flat_Rate__c) &amp;&amp;  ISBLANK(crms11__Discount_Percentage__c)</formula>
        <inlineHelpText>An internal FlexPricer indicator to advise the system to replace the Sales Price with the Fixed Volume Rate not adjust the Sales Price by the Discount Percentage.</inlineHelpText>
        <label>Use Fixed Volume Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Volume_Discount_Validation_Id__c</fullName>
        <description>Unique field that prevents same volume discount.</description>
        <label>Volume Discount Validation Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Volume Price</label>
    <listViews>
        <fullName>crms11__All_Volume_Prices</fullName>
        <columns>NAME</columns>
        <columns>crms11__Minimum_Quantity__c</columns>
        <columns>crms11__Product__c</columns>
        <columns>crms11__Discount_Percentage__c</columns>
        <columns>crms11__Flat_Rate__c</columns>
        <columns>crms11__Use_Flat_Volume_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Volume Prices</label>
    </listViews>
    <nameField>
        <displayFormat>VPID-{00000}</displayFormat>
        <label>Volume Price ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>crms11__Apply_one_Pricing_at_a_time</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(crms11__Flat_Rate__c) &amp;&amp;
!ISBLANK(crms11__Discount_Percentage__c )</errorConditionFormula>
        <errorMessage>Only one pricing is supported at a time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>crms11__At_least_one_Pricing_Should_be_Enable</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(crms11__Flat_Rate__c) &amp;&amp; 
ISBLANK(crms11__Discount_Percentage__c)</errorConditionFormula>
        <errorMessage>At least one Pricing should be applicable</errorMessage>
    </validationRules>
</CustomObject>